--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8000
 spring:
   profiles:
     active: dev
@@ -11,6 +13,15 @@ spring:
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.H2Dialect
+        connection:
+          password:
+          username: root
+          driver_class: org.h2.Driver
+          url: jdbc:h2:mem:taskManager
   h2:
     console:
       enabled: true
@@ -18,3 +29,6 @@ spring:
     enabled: true
     baseline-on-migrate: true
     locations: classpath:db/migration,classpath:db/migration/dev
+jwt:
+  secret: 'jwt-secret-code'
+  expiration: 3600000
